2000-12-09  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* strptime.c: Surround everything after including config.h in
	#ifndef HAVE_STRPTIME ... #endif.

2000-11-29  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Array-idx.h (assign): When resizing, cast fill value to LT.
	* Array2-idx.h (MAYBE_RESIZE_LHS): Likewise.

2000-11-28  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* MArray-defs.h: Protect against multiple inclusion.

2000-11-20  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* data-conv.h (enum save_type): Move LS_U_LONG and LS_LONG to the
	end of the list, to be compatible with previous versions of Octave.

2000-11-16  Paul Kienzle  <pkienzle@kienzle.powernet.co.uk>

	* oct-time.cc (DEFINE_SET_INT_FIELD_FCN): Don't check limits here,
	since mktime is supposed to `normalize' the results for us.

2000-10-31  Paul Kienzle  <pkienzle@kienzle.powernet.co.uk>

	* Array2.cc (Array2<T>::transpose): Avoid copy for empty matrices
	and vectors.  Use xelem for faster access to elements when copying.

2000-10-18  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* CMatrix.cc (ComplexMatrix::cumsum, ComplexMatrix::cumprod):
	Correct indexing for operation across rows.
	* dMatrix.cc (Matrix::cumsum, Matrix::cumprod): Likewise.

2000-10-12  Paul Kienzle  <pkienzle@kienzle.powernet.co.uk>

	* Array2-idx.h (Array2<T>::index (idx_vector&)): Avoid copying
	elements if arg is a colon.

2000-10-12  Cai Jianming <caijianming@yahoo.co.uk>

	dMatrix.cc (Matrix::cumprod (int) const): New arg, DIM.
	(Matrix::cumsum (int) const): Likewise.
	(Matrix::prod (int) const): Likewise.
	(Matrix::sum (int) const): Likewise.
	(Matrix::sumsq (int) const): Likewise.
	* CMatrix.cc (ComplexMatrix::cumprod (int dim) const): Likewise.
	(ComplexMatrix::cumsum (int) const): Likewise.
	(ComplexMatrix::prod (int) const): Likewise.
	(ComplexMatrix::sum (int) const): Likewise.
	(ComplexMatrix::sumsq (int) const): Likewise.

2000-10-10  John W. Eaton  <jwe@bevo.che.wisc.edu>
